# retro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  inspect.py
android/app/src/main/java/me/melchor9000/retro/: RetroActivity.java
android/app/src/main/jni/: Application.mk
android/app/src/main/jni/src/: Android.mk
doc/: Doxyfile
ios/retro++.xcodeproj/: project.pbxproj
ios/retro++.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lib/macOS/: install.sh
lib/windows/: install.bat  install.ps1
res/: README.md
src/: Info.plist  retro++.vcxproj.user.in  strip_macos.sh
src/base/: Game.cpp  GameActions.cpp  Image.cpp  Logger.cpp  Map.cpp  PlatformAndroid.cpp  PlatformLinux.cpp  PlatformMacOS.mm  PlatformWindows.cpp  PlatformiOS.cpp  SDLFileImpl.hpp  Sprites.cpp  StdFileImpl.hpp  Timer.cpp  UIObject.cpp
src/base/headers/: Animation.hpp  AnimationChain.hpp  CollisionDetection.hpp  Collisionable.hpp  Color.hpp  ControlledPlayer.hpp  Documentation.hpp  Frame.hpp  Game.hpp  GameActions.hpp  Image.hpp  Level.hpp  Logger.hpp  Map.hpp  MapObject.hpp  MovableObject.hpp  Object.hpp  Optional.hpp  Palette.hpp  Platform.hpp  Player.hpp  Sprites.hpp  Timeline.hpp  Timer.hpp  UIObject.hpp
src/editor/: CreateMapFileScreen.hpp  CreateSpritesFileScreen.hpp  Editor.cpp  MapEditorScreen.hpp  SelectMapFileScreen.hpp  SelectSpritesFileScreen.hpp  SpritesEditorScreen.hpp
src/editor/headers/: Editor.hpp
src/game/: DemoGame.inc.hpp  Palette.hpp  lel.inc.hpp  main.cpp
src/game/levels/: EndLevel.cpp  EndLevel.hpp  FirstLevel.cpp  FirstLevel.hpp
src/game/objects/: CollectableObject.cpp  CollectableObject.hpp  DaPlayer.cpp  DaPlayer.hpp
src/game/uiobjects/: Dialog.cpp  Dialog.hpp  InventoryHUD.cpp  InventoryHUD.hpp
